--- a/app/src/main/res/layout/fragment_order_confirmed_dialog.xml
+++ b/app/src/main/res/layout/fragment_order_confirmed_dialog.xml
@@ -58,6 +58,7 @@
 
         <Button
 
+            android:id="@+id/track_order"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -68,6 +69,7 @@
             android:textColor="@color/white" />
 
         <TextView
+            android:id="@+id/back_to_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
