--- a/app/src/main/res/layout/my_order_list_design.xml
+++ b/app/src/main/res/layout/my_order_list_design.xml
@@ -5,12 +5,11 @@
     app:cardUseCompatPadding="true"
     android:id="@+id/order_item"
     android:layout_width="match_parent"
-    android:layout_marginStart="10dp"
-    android:layout_marginEnd="10dp"
     android:elevation="5dp"
     app:cardCornerRadius="10dp"
     android:layout_height="wrap_content">
     <LinearLayout
+        android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -19,19 +18,19 @@
         android:layout_marginBottom="5dp"
         android:orientation="horizontal">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            app:cardCornerRadius="10dp"
-            app:cardUseCompatPadding="true">
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/food_image"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:scaleType="centerCrop"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                app:shapeAppearanceOverlay="@style/roundedCornerImageView"
                 android:src="@mipmap/sample2" />
 
 
-        </androidx.cardview.widget.CardView>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -39,6 +38,7 @@
             android:layout_margin="15dp"
             android:layout_weight="1">
             <TextView
+                android:id="@+id/order_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="#1234567890"
@@ -48,9 +48,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:orientation="horizontal">
             <TextView
+                android:id="@+id/date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="12 jan 2020"
@@ -64,7 +64,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:text="₹ 250"
+                    android:text="₹ "
+                    android:textColor="@color/grey"
+                    />
+                <TextView
+                    android:id="@+id/total"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:text="250"
                     android:textColor="@color/grey"
                     />
             </LinearLayout>
@@ -73,13 +81,16 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/delivered_address"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:text="No 03, 4th Lane,address"
                 android:textColor="@color/grey"
                 android:drawableLeft="@drawable/ic_location2"
                 android:drawablePadding="8dp"
                 android:textSize="12sp"
+                android:singleLine="true"
+                android:ellipsize="end"
                 />
 
         </LinearLayout>
