--- a/app/src/main/res/layout/my_order_list_design2.xml
+++ b/app/src/main/res/layout/my_order_list_design2.xml
@@ -21,6 +21,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/food_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -37,9 +38,18 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+
+                android:fontFamily="@font/montserrat_semi_bold"
+                android:text="₹ "
+                android:textColor="@color/grey"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/total"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginEnd="40dp"
                 android:fontFamily="@font/montserrat_semi_bold"
-                android:text="₹ 250"
+                android:text="250"
                 android:textColor="@color/grey"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -64,6 +74,7 @@
 
 
             <TextView
+                android:id="@+id/quantity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="12"
@@ -84,9 +95,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_semi_bold"
+                android:text="- ₹ "
+                android:textColor="@color/green"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/discount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginEnd="40dp"
                 android:fontFamily="@font/montserrat_semi_bold"
-                android:text="- ₹ 50"
+                android:text="50"
                 android:textColor="@color/green"
                 android:textStyle="bold" />
 
