--- a/app/src/main/res/layout/home_list_deisgn1.xml
+++ b/app/src/main/res/layout/home_list_deisgn1.xml
@@ -85,12 +85,14 @@
                 android:layout_weight="1"/>
             <TextView
                 android:id="@+id/shop_address"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:text="No 03, 4th Lane,address"
                 android:textColor="@color/grey"
                 android:drawableLeft="@drawable/ic_location2"
                 android:drawablePadding="8dp"
+                android:maxLines="2"
+                android:ellipsize="end"
                 android:textSize="12sp"
                 />
 
