--- a/app/src/main/res/layout/restaurant_recycler_item.xml
+++ b/app/src/main/res/layout/restaurant_recycler_item.xml
@@ -31,8 +31,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginStart="15sp"
-            android:layout_marginTop="15sp"
-            android:layout_marginBottom="15dp"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="10dp"
             android:layout_weight="1"
             android:orientation="vertical">
 
@@ -83,10 +83,13 @@
 
             <TextView
                 android:id="@+id/shop_address"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_marginEnd="60dp"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_location2"
                 android:drawablePadding="8dp"
+                android:maxLines="2"
+                android:ellipsize="end"
                 android:text="No 03, 4th Lane,address"
                 android:textColor="@color/grey"
                 android:textSize="12sp" />
