loading added to some activity

--- a/app/src/main/res/layout/activity_my_orders.xml
+++ b/app/src/main/res/layout/activity_my_orders.xml
@@ -35,19 +35,15 @@
 
 
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabs_services"
-        style="@style/MyCustomTabLayout"
+        android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:tabBackground="@drawable/tab_color_selector"
-        app:tabIndicatorColor="@null"
-        app:tabGravity="fill"
         app:tabMode="fixed"
         android:textAlignment="center"
         android:layout_marginTop="5dp"
          />
     <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewpager_car_services"
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
