--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -284,6 +284,7 @@
                 android:text="Payment Option" />
 
             <RadioGroup
+                android:id="@+id/payment_method"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -292,11 +293,14 @@
                 android:layout_marginEnd="20dp">
 
                 <RadioButton
+                    android:id="@+id/pay_now"
+                    android:checked="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Pay Now" />
 
                 <RadioButton
+                    android:id="@+id/cod"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Pay on delivery" />
