--- a/app/src/main/res/layout/activity_product_detail_and_add.xml
+++ b/app/src/main/res/layout/activity_product_detail_and_add.xml
@@ -89,10 +89,10 @@
                     android:layout_height="80dp"
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="20dp"
-                    android:src="@mipmap/sample2"
+                    android:layout_marginEnd="20dp"
                     android:scaleType="centerCrop"
-                    app:shapeAppearanceOverlay="@style/roundedCornerImageView"
-                    android:layout_marginEnd="20dp" />
+                    android:src="@mipmap/sample2"
+                    app:shapeAppearanceOverlay="@style/roundedCornerImageView" />
             </LinearLayout>
 
             <View
@@ -126,6 +126,7 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/rating_view"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="4.7" />
@@ -137,6 +138,7 @@
                     android:layout_weight="2" />
 
                 <ImageView
+                    android:id="@+id/availability"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_close_tag" />
@@ -182,13 +184,67 @@
                 android:id="@+id/category_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                />
+                android:layout_marginBottom="20dp" />
 
-         <!--   <include layout="@layout/shop_food_child_item"/>-->
+            <!--   <include layout="@layout/shop_food_child_item"/>-->
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
+    <LinearLayout
+        android:id="@+id/go_to_cart_layout"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/green"
+        android:gravity="center_vertical"
+        android:visibility="gone"
+        android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/cart_item_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:text="4"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="  items"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="|   ₹  "
+            android:textColor="@color/white"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/cart_total_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="400"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <TextView
+            android:id="@+id/to_cart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="Go To Cart"
+            android:layout_marginEnd="20dp"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
+    </LinearLayout>
 </LinearLayout>
