--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -138,18 +138,19 @@
 
                         android:text="address type"
                         android:textSize="12sp" />
+
                     <Space
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"/>
+                        android:layout_weight="1" />
+
                     <TextView
                         android:id="@+id/otp_view"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="OTP : 1234"
-                        android:textSize="12sp"
                         android:layout_marginEnd="10dp"
-                        />
+                        android:text="OTP : 1234"
+                        android:textSize="12sp" />
                 </LinearLayout>
 
 
@@ -318,6 +319,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="40dp"
+                android:layout_marginBottom="50dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -346,17 +348,90 @@
                     android:textStyle="bold" />
             </LinearLayout>
 
-
-            <Button
-                android:id="@+id/btn_done"
-                android:layout_width="200dp"
+            <LinearLayout
+                android:id="@+id/review_layout1"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="50dp"
-                android:layout_marginBottom="30dp"
-                android:background="@drawable/background_btn_login"
-                android:text="Done"
-                android:textColor="@color/white" />
+                android:layout_marginBottom="20dp"
+                android:visibility="gone"
+                android:orientation="vertical">
+
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:background="@color/dirty_white" />
+
+                <TextView
+                    android:id="@+id/manage_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:drawableRight="@drawable/ic_arrow_right_red"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:text="Review Order" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="20dp"
+                    android:background="@color/dirty_white" />
+            </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/review_layout2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
+            android:visibility="gone"
+            android:orientation="vertical">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/dirty_white" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="20dp"
+                android:text="Your Review"/>
+            <androidx.appcompat.widget.AppCompatRatingBar
+                android:id="@+id/rating_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numStars="5"
+                android:layout_marginStart="20dp"
+                style="@style/customRatingBar"
+                android:layout_marginTop="10dp"
+                />
+            <TextView
+                android:id="@+id/review"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="this a review"
+                android:textColor="@color/black"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="23dp"
+                android:layout_marginBottom="10dp"
+                />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/dirty_white" />
+        </LinearLayout>
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
